<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/timerTV"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:text="@string/_0_00_00"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/h" />

        <EditText
            android:id="@+id/hValueTV"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="none|numberDecimal"
            android:text="@string/_0_08" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|date"
            android:text="@string/m" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/v" />

        <EditText
            android:id="@+id/vValueTV"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:editable="false"
            android:ems="10"
            android:inputType="number|numberDecimal|date"
            android:text="@string/_0" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number|date"
            android:text="@string/m_3" />


    </LinearLayout>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:onClick="startOnClick"
        android:text="@string/start" />

    <Button
        android:id="@+id/stopBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:onClick="stopOnClick"
        android:text="@string/stop" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:onClick="resetOnClick"
        android:text="@string/reset" />

</LinearLayout>